@@ -5,14 +5,24 @@ from libschedule import *
 import smtplib
 from email.MIMEText import MIMEText
 import StringIO
+import textwrap
 
 cat_task = set(('release', 'tarball'))
+
+FOOTER = """\n\n\nFor more information about $unstable, the full schedule, the official
+module lists and the proposed module lists, please see our colorful $unstable
+page:
+   http://www.gnome.org/start/unstable
+
+For a quick overview of the GNOME schedule, please see:
+   http://live.gnome.org/Schedule
+
+Thanks,"""
 
 def mail_events(events):
     if not len(events): return # sanity check
 
-    print "Mailing!"
-    mail = 'olav@bkor.dhs.org'
+    mail = 'release-team@gnome.org'
 
     subject = ""
     tasks = [event for event in events if event.category in cat_task]
@@ -29,16 +39,9 @@ def mail_events(events):
     if len(events) > 1:
         contents.write("We would like to inform you about the following:\n* %s\n\n\n" % "\n* ".join([event.summary() for event in events]))
 
-    contents.write("\n\n".join([event.description() for event in events]))
-    contents.write("""\n\n\nFor more informations about 2.21, the full schedule, the official
-module lists and the proposed module lists, please see our colorful 2.21
-page on the wiki:
-   http://live.gnome.org/TwoPointTwentyone
+    contents.write("\n\n\n".join([textwrap.fill(event.description()) for event in events]))
 
-For a quick overview of the GNOME schedule, please see:
-   http://live.gnome.org/Schedule
-
-Thanks,""")
+    contents.write(string.Template(FOOTER).safe_substitute(events[0]))
 
     s = smtplib.SMTP()
     s.connect()
@@ -52,19 +55,24 @@ Thanks,""")
 
 
 events = parse_file ("2.22.schedule")
-today = datetime.date.today ()
-today = datetime.date (2008, 2, 29)
+today = datetime.date.today()
 today_plus3 = today + datetime.timedelta (3)
 
 events_to_email = []
 for event in events:
-    print event
-#    if event.date == today_plus3 and event.category == "release":
-#        mail_tarballs_due (event)
-
     if event.date == today_plus3:
         events_to_email.append(event)
 
 if len(events_to_email):
     mail_events(events_to_email)
+
+# For testing purposes
+#dates = set()
+#for event in events:
+#    dates.add(event.date)
+#
+#for date in dates:
+#    events_to_email = [event for event in events if event.date == date]
+#    mail_events(events_to_email)
+
 
